vezba5/vezba5domaci/zadatak6/synsem.output
Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function
    3              | function_list function

    4 $@1: %empty

    5 $@2: %empty

    6 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 body

    7 type: _TYPE

    8 parameter: %empty
    9          | type _ID

   10 body: _LBRACKET variable_list statement_list _RBRACKET

   11 variable_list: %empty
   12              | variable_list variable

   13 variable: type _ID _SEMICOLON

   14 statement_list: %empty
   15               | statement_list statement

   16 $@3: %empty

   17 while_statement: _WHILE _LPAREN _ID _RELOP literal _RPAREN $@3 statement

   18 statement: compound_statement
   19          | assignment_statement
   20          | if_statement
   21          | return_statement
   22          | while_statement
   23          | break_statement

   24 break_statement: _BREAK _SEMICOLON

   25 compound_statement: _LBRACKET statement_list _RBRACKET

   26 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   27 num_exp: exp
   28        | num_exp _AROP exp

   29 exp: literal
   30    | _ID
   31    | function_call
   32    | _LPAREN num_exp _RPAREN

   33 literal: _INT_NUMBER
   34        | _UINT_NUMBER

   35 $@4: %empty

   36 function_call: _ID $@4 _LPAREN argument _RPAREN

   37 argument: %empty
   38         | num_exp

   39 if_statement: if_part
   40             | if_part _ELSE statement

   41 if_part: _IF _LPAREN rel_exp _RPAREN statement

   42 rel_exp: num_exp _RELOP num_exp

   43 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 7
_IF (259) 41
_ELSE (260) 40
_RETURN (261) 43
_ID (262) 6 9 13 17 26 30 36
_INT_NUMBER (263) 33
_UINT_NUMBER (264) 34
_LPAREN (265) 6 17 32 36 41
_RPAREN (266) 6 17 32 36 41
_LBRACKET (267) 10 25
_RBRACKET (268) 10 25
_ASSIGN (269) 26
_SEMICOLON (270) 13 24 26 43
_AROP (271) 28
_RELOP (272) 17 42
_WHILE (273) 17
_BREAK (274) 24
ONLY_IF (275)


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
program (22)
    on left: 1, on right: 0
function_list (23)
    on left: 2 3, on right: 1 3
function (24)
    on left: 6, on right: 2 3
$@1 (25)
    on left: 4, on right: 6
$@2 (26)
    on left: 5, on right: 6
type (27)
    on left: 7, on right: 6 9 13
parameter (28)
    on left: 8 9, on right: 6
body (29)
    on left: 10, on right: 6
variable_list (30)
    on left: 11 12, on right: 10 12
variable (31)
    on left: 13, on right: 12
statement_list (32)
    on left: 14 15, on right: 10 15 25
while_statement (33)
    on left: 17, on right: 22
$@3 (34)
    on left: 16, on right: 17
statement (35)
    on left: 18 19 20 21 22 23, on right: 15 17 40 41
break_statement (36)
    on left: 24, on right: 23
compound_statement (37)
    on left: 25, on right: 18
assignment_statement (38)
    on left: 26, on right: 19
num_exp (39)
    on left: 27 28, on right: 26 28 32 38 42 43
exp (40)
    on left: 29 30 31 32, on right: 27 28
literal (41)
    on left: 33 34, on right: 17 29
function_call (42)
    on left: 36, on right: 31
$@4 (43)
    on left: 35, on right: 36
argument (44)
    on left: 37 38, on right: 36
if_statement (45)
    on left: 39 40, on right: 20
if_part (46)
    on left: 41, on right: 39 40
rel_exp (47)
    on left: 42, on right: 41
return_statement (48)
    on left: 43, on right: 21


State 0

    0 $accept: . program $end

    _TYPE  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    function       go to state 4
    type           go to state 5


State 1

    7 type: _TYPE .

    $default  reduce using rule 7 (type)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: function_list .
    3 function_list: function_list . function

    _TYPE  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7
    type      go to state 5


State 4

    2 function_list: function .

    $default  reduce using rule 2 (function_list)


State 5

    6 function: type . _ID $@1 _LPAREN parameter _RPAREN $@2 body

    _ID  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


State 8

    6 function: type _ID . $@1 _LPAREN parameter _RPAREN $@2 body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 9


State 9

    6 function: type _ID $@1 . _LPAREN parameter _RPAREN $@2 body

    _LPAREN  shift, and go to state 10


State 10

    6 function: type _ID $@1 _LPAREN . parameter _RPAREN $@2 body

    _TYPE  shift, and go to state 1

    $default  reduce using rule 8 (parameter)

    type       go to state 11
    parameter  go to state 12


State 11

    9 parameter: type . _ID

    _ID  shift, and go to state 13


State 12

    6 function: type _ID $@1 _LPAREN parameter . _RPAREN $@2 body

    _RPAREN  shift, and go to state 14


State 13

    9 parameter: type _ID .

    $default  reduce using rule 9 (parameter)


State 14

    6 function: type _ID $@1 _LPAREN parameter _RPAREN . $@2 body

    $default  reduce using rule 5 ($@2)

    $@2  go to state 15


State 15

    6 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 . body

    _LBRACKET  shift, and go to state 16

    body  go to state 17


State 16

   10 body: _LBRACKET . variable_list statement_list _RBRACKET

    $default  reduce using rule 11 (variable_list)

    variable_list  go to state 18


State 17

    6 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 body .

    $default  reduce using rule 6 (function)


State 18

   10 body: _LBRACKET variable_list . statement_list _RBRACKET
   12 variable_list: variable_list . variable

    _TYPE  shift, and go to state 1

    $default  reduce using rule 14 (statement_list)

    type            go to state 19
    variable        go to state 20
    statement_list  go to state 21


State 19

   13 variable: type . _ID _SEMICOLON

    _ID  shift, and go to state 22


State 20

   12 variable_list: variable_list variable .

    $default  reduce using rule 12 (variable_list)


State 21

   10 body: _LBRACKET variable_list statement_list . _RBRACKET
   15 statement_list: statement_list . statement

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26
    _RBRACKET  shift, and go to state 27
    _WHILE     shift, and go to state 28
    _BREAK     shift, and go to state 29

    while_statement       go to state 30
    statement             go to state 31
    break_statement       go to state 32
    compound_statement    go to state 33
    assignment_statement  go to state 34
    if_statement          go to state 35
    if_part               go to state 36
    return_statement      go to state 37


State 22

   13 variable: type _ID . _SEMICOLON

    _SEMICOLON  shift, and go to state 38


State 23

   41 if_part: _IF . _LPAREN rel_exp _RPAREN statement

    _LPAREN  shift, and go to state 39


State 24

   43 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 40
    _INT_NUMBER   shift, and go to state 41
    _UINT_NUMBER  shift, and go to state 42
    _LPAREN       shift, and go to state 43

    num_exp        go to state 44
    exp            go to state 45
    literal        go to state 46
    function_call  go to state 47


State 25

   26 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON

    _ASSIGN  shift, and go to state 48


State 26

   25 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 14 (statement_list)

    statement_list  go to state 49


State 27

   10 body: _LBRACKET variable_list statement_list _RBRACKET .

    $default  reduce using rule 10 (body)


State 28

   17 while_statement: _WHILE . _LPAREN _ID _RELOP literal _RPAREN $@3 statement

    _LPAREN  shift, and go to state 50


State 29

   24 break_statement: _BREAK . _SEMICOLON

    _SEMICOLON  shift, and go to state 51


State 30

   22 statement: while_statement .

    $default  reduce using rule 22 (statement)


State 31

   15 statement_list: statement_list statement .

    $default  reduce using rule 15 (statement_list)


State 32

   23 statement: break_statement .

    $default  reduce using rule 23 (statement)


State 33

   18 statement: compound_statement .

    $default  reduce using rule 18 (statement)


State 34

   19 statement: assignment_statement .

    $default  reduce using rule 19 (statement)


State 35

   20 statement: if_statement .

    $default  reduce using rule 20 (statement)


State 36

   39 if_statement: if_part .
   40             | if_part . _ELSE statement

    _ELSE  shift, and go to state 52

    $default  reduce using rule 39 (if_statement)


State 37

   21 statement: return_statement .

    $default  reduce using rule 21 (statement)


State 38

   13 variable: type _ID _SEMICOLON .

    $default  reduce using rule 13 (variable)


State 39

   41 if_part: _IF _LPAREN . rel_exp _RPAREN statement

    _ID           shift, and go to state 40
    _INT_NUMBER   shift, and go to state 41
    _UINT_NUMBER  shift, and go to state 42
    _LPAREN       shift, and go to state 43

    num_exp        go to state 53
    exp            go to state 45
    literal        go to state 46
    function_call  go to state 47
    rel_exp        go to state 54


State 40

   30 exp: _ID .
   36 function_call: _ID . $@4 _LPAREN argument _RPAREN

    _LPAREN   reduce using rule 35 ($@4)
    $default  reduce using rule 30 (exp)

    $@4  go to state 55


State 41

   33 literal: _INT_NUMBER .

    $default  reduce using rule 33 (literal)


State 42

   34 literal: _UINT_NUMBER .

    $default  reduce using rule 34 (literal)


State 43

   32 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 40
    _INT_NUMBER   shift, and go to state 41
    _UINT_NUMBER  shift, and go to state 42
    _LPAREN       shift, and go to state 43

    num_exp        go to state 56
    exp            go to state 45
    literal        go to state 46
    function_call  go to state 47


State 44

   28 num_exp: num_exp . _AROP exp
   43 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 57
    _AROP       shift, and go to state 58


State 45

   27 num_exp: exp .

    $default  reduce using rule 27 (num_exp)


State 46

   29 exp: literal .

    $default  reduce using rule 29 (exp)


State 47

   31 exp: function_call .

    $default  reduce using rule 31 (exp)


State 48

   26 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 40
    _INT_NUMBER   shift, and go to state 41
    _UINT_NUMBER  shift, and go to state 42
    _LPAREN       shift, and go to state 43

    num_exp        go to state 59
    exp            go to state 45
    literal        go to state 46
    function_call  go to state 47


State 49

   15 statement_list: statement_list . statement
   25 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26
    _RBRACKET  shift, and go to state 60
    _WHILE     shift, and go to state 28
    _BREAK     shift, and go to state 29

    while_statement       go to state 30
    statement             go to state 31
    break_statement       go to state 32
    compound_statement    go to state 33
    assignment_statement  go to state 34
    if_statement          go to state 35
    if_part               go to state 36
    return_statement      go to state 37


State 50

   17 while_statement: _WHILE _LPAREN . _ID _RELOP literal _RPAREN $@3 statement

    _ID  shift, and go to state 61


State 51

   24 break_statement: _BREAK _SEMICOLON .

    $default  reduce using rule 24 (break_statement)


State 52

   40 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26
    _WHILE     shift, and go to state 28
    _BREAK     shift, and go to state 29

    while_statement       go to state 30
    statement             go to state 62
    break_statement       go to state 32
    compound_statement    go to state 33
    assignment_statement  go to state 34
    if_statement          go to state 35
    if_part               go to state 36
    return_statement      go to state 37


State 53

   28 num_exp: num_exp . _AROP exp
   42 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 58
    _RELOP  shift, and go to state 63


State 54

   41 if_part: _IF _LPAREN rel_exp . _RPAREN statement

    _RPAREN  shift, and go to state 64


State 55

   36 function_call: _ID $@4 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 65


State 56

   28 num_exp: num_exp . _AROP exp
   32 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 66
    _AROP    shift, and go to state 58


State 57

   43 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 43 (return_statement)


State 58

   28 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 40
    _INT_NUMBER   shift, and go to state 41
    _UINT_NUMBER  shift, and go to state 42
    _LPAREN       shift, and go to state 43

    exp            go to state 67
    literal        go to state 46
    function_call  go to state 47


State 59

   26 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   28 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 68
    _AROP       shift, and go to state 58


State 60

   25 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 25 (compound_statement)


State 61

   17 while_statement: _WHILE _LPAREN _ID . _RELOP literal _RPAREN $@3 statement

    _RELOP  shift, and go to state 69


State 62

   40 if_statement: if_part _ELSE statement .

    $default  reduce using rule 40 (if_statement)


State 63

   42 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 40
    _INT_NUMBER   shift, and go to state 41
    _UINT_NUMBER  shift, and go to state 42
    _LPAREN       shift, and go to state 43

    num_exp        go to state 70
    exp            go to state 45
    literal        go to state 46
    function_call  go to state 47


State 64

   41 if_part: _IF _LPAREN rel_exp _RPAREN . statement

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26
    _WHILE     shift, and go to state 28
    _BREAK     shift, and go to state 29

    while_statement       go to state 30
    statement             go to state 71
    break_statement       go to state 32
    compound_statement    go to state 33
    assignment_statement  go to state 34
    if_statement          go to state 35
    if_part               go to state 36
    return_statement      go to state 37


State 65

   36 function_call: _ID $@4 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 40
    _INT_NUMBER   shift, and go to state 41
    _UINT_NUMBER  shift, and go to state 42
    _LPAREN       shift, and go to state 43

    $default  reduce using rule 37 (argument)

    num_exp        go to state 72
    exp            go to state 45
    literal        go to state 46
    function_call  go to state 47
    argument       go to state 73


State 66

   32 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 32 (exp)


State 67

   28 num_exp: num_exp _AROP exp .

    $default  reduce using rule 28 (num_exp)


State 68

   26 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 26 (assignment_statement)


State 69

   17 while_statement: _WHILE _LPAREN _ID _RELOP . literal _RPAREN $@3 statement

    _INT_NUMBER   shift, and go to state 41
    _UINT_NUMBER  shift, and go to state 42

    literal  go to state 74


State 70

   28 num_exp: num_exp . _AROP exp
   42 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 58

    $default  reduce using rule 42 (rel_exp)


State 71

   41 if_part: _IF _LPAREN rel_exp _RPAREN statement .

    $default  reduce using rule 41 (if_part)


State 72

   28 num_exp: num_exp . _AROP exp
   38 argument: num_exp .

    _AROP  shift, and go to state 58

    $default  reduce using rule 38 (argument)


State 73

   36 function_call: _ID $@4 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 75


State 74

   17 while_statement: _WHILE _LPAREN _ID _RELOP literal . _RPAREN $@3 statement

    _RPAREN  shift, and go to state 76


State 75

   36 function_call: _ID $@4 _LPAREN argument _RPAREN .

    $default  reduce using rule 36 (function_call)


State 76

   17 while_statement: _WHILE _LPAREN _ID _RELOP literal _RPAREN . $@3 statement

    $default  reduce using rule 16 ($@3)

    $@3  go to state 77


State 77

   17 while_statement: _WHILE _LPAREN _ID _RELOP literal _RPAREN $@3 . statement

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26
    _WHILE     shift, and go to state 28
    _BREAK     shift, and go to state 29

    while_statement       go to state 30
    statement             go to state 78
    break_statement       go to state 32
    compound_statement    go to state 33
    assignment_statement  go to state 34
    if_statement          go to state 35
    if_part               go to state 36
    return_statement      go to state 37


State 78

   17 while_statement: _WHILE _LPAREN _ID _RELOP literal _RPAREN $@3 statement .

    $default  reduce using rule 17 (while_statement)
